--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
-    "typescript": "~3.9.3"
+    "style-resources-loader": "^1.4.1",
+    "typescript": "~3.9.3",
+    "vue-cli-plugin-style-resources-loader": "^0.1.4"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
