--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/jquery": "^3.5.5",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "vue": "^3.0.0",
@@ -41,7 +42,6 @@
   },
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
-      "vue-cli-service lint",
       "git add"
     ]
   }
