--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3-movie-trailer",
+  "name": "movie-trailer-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,40 +8,45 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@types/jquery": "^3.5.5",
-    "axios": "^0.21.1",
-    "core-js": "^3.6.5",
-    "jquery": "^3.5.1",
-    "vue": "^3.0.0",
-    "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "axios": "^0.19.2",
+    "better-scroll": "^2.0.0-beta.10",
+    "dplayer": "^1.26.0",
+    "vue": "^3.0.0-rc.5",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^8.4.2",
+    "vue-router": "^4.0.0-alpha.6",
+    "vue3-lazy": "^1.0.0-alpha.1",
+    "vuex": "^4.0.0-alpha.1"
   },
   "devDependencies": {
+    "@types/better-scroll": "^1.12.2",
+    "@types/dplayer": "^1.25.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-router": "~4.4.0",
+    "@vue/cli-plugin-typescript": "~4.4.0",
+    "@vue/cli-plugin-vuex": "~4.4.0",
+    "@vue/cli-service": "~4.4.0",
+    "@vue/compiler-sfc": "^3.0.0-beta.1",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-vue": "^7.0.0-alpha.0",
+    "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1",
+    "typescript": "~3.9.3",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "lint-staged": "^9.5.0",
-    "style-resources-loader": "^1.4.1",
-    "typescript": "~3.9.3",
-    "vue-cli-plugin-style-resources-loader": "^0.1.4"
+    "vue-cli-plugin-vue-next": "~0.1.3"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
+      "vue-cli-service lint",
       "git add"
     ]
   }
